Fix finding index.html after restructure