@@ -1,7 +1,6 @@
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStream;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpExchange;
@@ -10,7 +9,13 @@ public class FrontEndHandler implements HttpHandler {
     private final byte[] html;
 
     public FrontEndHandler() throws IOException {
-        this.html = Files.readAllBytes(Paths.get("index.html"));
+        try (InputStream is = getClass().getResourceAsStream("/index.html")) {
+            if (is == null) {
+                throw new RuntimeException("index.html not found");
+            }
+
+            this.html = is.readAllBytes();
+        }
     }
 
     @Override
